[package]
name = "byzantine"
version = "0.1.0"
description = "An absurd voting platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "byzantine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
